--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,8 +2,15 @@
 .header {
     grid-area: h;
     background-color: rgb(32, 32, 43);
-  }
-  .header img {
+}
+
+.header img {
     width: 50px;
-  }
-  
+}
+
+.loginblock {
+    float: right;
+}
+.loginblock a {
+    color: #bcc4c4;
+}
